Add codeowners file

--- a/.github/workflows/ci-actions.yaml
+++ b/.github/workflows/ci-actions.yaml
@@ -1,6 +1,18 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+name: CI Actions
+run-name: ${{ github.actor }} is testing changes
+on:
+  pull_request:
+    types:
+      [
+        opened,
+        reopened,
+        review_requested,
+        auto_merge_enabled,
+        ready_for_review,
+        edited,
+      ]
+  merge_group:
+    types: [checks_requested]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
