--- a/.github/workflows/ci-actions.yaml
+++ b/.github/workflows/ci-actions.yaml
@@ -34,8 +34,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pylint
-      - name: Analysing the code with pylint
+          pip install ansible-lint
+      - name: Analysing the code with ansible-lint
         run: |
-          pylint $(git ls-files '*.py')
+          ansible-lint $(git ls-files '*.yml')
       - run: echo "🍏 This job's status is ${{ job.status }}."
