--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,69 @@
----
+name: CI
+
+on:
+  push:
+    branches:
+      - main
+
+env:
+  TRAVIS_BUILD_DIR: /home/runner/work/ansible-thoteam.nexus3-oss
+
+jobs:
+  lint:
+    name: Checking overall syntax (groovy, yaml, python)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install dependencies
+        run: pip install --upgrade --upgrade-strategy eager -r requirements.txt
+
+      - name: Run linting
+        run: |
+          ./tests/test_groovySyntax.sh
+          molecule test
+
+  test-centos7:
+    name: Test on centos7
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install dependencies
+        run: pip install --upgrade --upgrade-strategy eager -r requirements.txt
+
+      - name: Run tests on centos7
+        run: molecule test -s default-centos7
+
+  test-debian-bullseye:
+    name: Test on Debian Bullseye
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install dependencies
+        run: pip install --upgrade --upgrade-strategy eager -r requirements.txt
+
+      - name: Run tests on Debian Bullseye
+        run: molecule test -s default-debian_bullseye
 branches:
   only:
     - main
