--- a/.github/workflows/ci-actions.yaml
+++ b/.github/workflows/ci-actions.yaml
@@ -2,6 +2,16 @@ name: CI Actions
 run-name: ${{ github.actor }} is testing changes
 on:
   pull_request:
+    types:
+      [
+        opened,
+        reopened,
+        review_requested,
+        auto_merge_enabled,
+        ready_for_review,
+        edited,
+        synchronize,
+      ]
   merge_group:
     types: [checks_requested]
 jobs:
@@ -25,8 +35,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ansible-lint
+          pip install -r requirements.txt
       - name: Analysing the code with ansible-lint
         run: |
-          ansible-lint $(git ls-files '*.yml')
+          ansible-lint -v
       - run: echo "🍏 This job's status is ${{ job.status }}."
