--- a/.github/workflows/ci-actions.yaml
+++ b/.github/workflows/ci-actions.yaml
@@ -33,5 +33,5 @@ jobs:
           pip install -r requirements.txt
       - name: Run Yaml lint
         run: |
-          yamllint .
+          cd defaults/ && yamllint .
       - run: echo "🍏 This job's status is ${{ job.status }}."
