--- a/.github/workflows/ci-actions.yaml
+++ b/.github/workflows/ci-actions.yaml
@@ -33,5 +33,6 @@ jobs:
           pip install -r requirements.txt
       - name: Run lint
         run: |
+          apt-get install groovy -y
           ./tests/test_groovySyntax.sh
       - run: echo "🍏 This job's status is ${{ job.status }}."
