--- a/.github/workflows/ci-actions.yaml
+++ b/.github/workflows/ci-actions.yaml
@@ -15,7 +15,7 @@ on:
   merge_group:
     types: [checks_requested]
 jobs:
-  Prepare:
+  Linting:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -31,8 +31,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          sudo apt-get install groovy -y
       - name: Run lint
         run: |
-          sudo apt-get install groovy -y
           ./tests/test_groovySyntax.sh
       - run: echo "🍏 This job's status is ${{ job.status }}."
