Add introduction text

--- a/molecule/default-centos7/molecule.yml
+++ b/molecule/default-centos7/molecule.yml
@@ -4,15 +4,12 @@ dependency:
   enabled: false
 
 driver:
-  name: docker
-  safe_files:
-    - nexus-downloads
-
-lint: |
-  set -e
-  yamllint .
-  ansible-lint
-  flake8
+  name: default
+  options:
+    managed: True
+    login_cmd_template: "docker exec -ti {instance} bash"
+    ansible_connection_options:
+      ansible_connection: docker
 
 platforms:
   - name: nexus3-oss-centos-7
@@ -45,6 +42,8 @@ platforms:
 
 provisioner:
   name: ansible
+  lint:
+    name: ansible-lint
 
 scenario:
   check_sequence:
