sync the role into the container for easy access when using molecule login

--- a/molecule/default-rockylinux8/molecule.yml
+++ b/molecule/default-rockylinux8/molecule.yml
@@ -25,6 +25,7 @@ platforms:
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
       - ${MOLECULE_PROJECT_DIRECTORY}/molecule/.nexus-downloads:/nexus-downloads
+      - ${MOLECULE_PROJECT_DIRECTORY}:/ansible
 
   - name: slapd-server-mock
     hostname: slapd-server-mock
