--- a/molecule/default-verify.yml
+++ b/molecule/default-verify.yml
@@ -25,13 +25,13 @@
         state: present
         image: alpine:latest
 
-    # tag alpine docker image and push it to local registry
-    - name: Tag and push alpine image
-      ansible.builtin.command: podman tag alpine:latest localhost:5000/alpine:latest
-
     #podman login to local registry
     - name: Login to local registry
       ansible.builtin.command: "podman login -u {{ nexus_admin_username }} -p {{ nexus_admin_password }} localhost:5000 --tls-verify={{ nexus_validate_certs }}"
+
+    # tag alpine docker image and push it to local registry
+    - name: Tag and push alpine image
+      ansible.builtin.command: podman tag alpine:latest localhost:5000/alpine:latest
 
     # push alpine docker image to local registry
     - name: Push alpine image
@@ -56,3 +56,87 @@
           - nexus_api_response.json.storage.writePolicy == 'ALLOW'
         fail_msg: "hosted docker repo 'docker-private' writePolicy is {{ nexus_api_response.json.storage.writePolicy}}"
         success_msg: "hosted docker repo 'docker-private' writePolicy is {{ nexus_api_response.json.storage.writePolicy}}"
+
+    # Call Nexus API to get docker-private-redeploy hosted repo configuration
+    - name: Get config for docker-private-redeploy hosted repo
+      ansible.builtin.uri:
+        url: "https://localhost:8091/service/rest/v1/repositories/docker/hosted/docker-private-redeploy"
+        method: GET
+        validate_certs: "{{ nexus_validate_certs }}"
+        user: "{{ nexus_admin_username }}"
+        password: "{{ nexus_admin_password }}"
+        force_basic_auth: yes
+      register: nexus_api_response
+      delegate_to: localhost
+
+    # assert that hosted docker repo 'docker-private' writePolicy is 'ALLOW'
+    - name: Assert that hosted docker repo 'docker-private-redeploy' writePolicy is 'DENY'
+      ansible.builtin.assert:
+        that:
+          - nexus_api_response.json.storage.writePolicy == 'DENY'
+        fail_msg: "hosted docker repo 'docker-private-redeploy' writePolicy is {{ nexus_api_response.json.storage.writePolicy}}"
+        success_msg: "hosted docker repo 'docker-private-redeploy' writePolicy is {{ nexus_api_response.json.storage.writePolicy}}"
+
+    # Call Nexus API to get docker-private-no-redeploy hosted repo configuration
+    - name: Get config for docker-private-no-redeploy hosted repo
+      ansible.builtin.uri:
+        url: "https://localhost:8091/service/rest/v1/repositories/docker/hosted/docker-private-no-redeploy"
+        method: GET
+        validate_certs: "{{ nexus_validate_certs }}"
+        user: "{{ nexus_admin_username }}"
+        password: "{{ nexus_admin_password }}"
+        force_basic_auth: yes
+      register: nexus_api_response
+      delegate_to: localhost
+
+    # assert that hosted docker repo 'docker-private-no-redeploy' writePolicy is 'ALLOW'
+    - name: Assert that hosted docker repo 'docker-private-no-redeploy' writePolicy is 'DENY'
+      ansible.builtin.assert:
+        that:
+          - nexus_api_response.json.storage.writePolicy == 'DENY'
+        fail_msg: "hosted docker repo 'docker-private-no-redeploy' writePolicy is {{ nexus_api_response.json.storage.writePolicy}}"
+        success_msg: "hosted docker repo 'docker-private-no-redeploy' writePolicy is {{ nexus_api_response.json.storage.writePolicy}}"
+
+    # tag alpine docker image and push it to local registry
+    - name: Tag and push alpine image
+      ansible.builtin.command: podman tag alpine:latest localhost:5005/alpine:latest
+
+    #podman login to local registry
+    - name: Login to local registry
+      ansible.builtin.command: "podman login -u {{ nexus_admin_username }} -p {{ nexus_admin_password }} localhost:5005 --tls-verify={{ nexus_validate_certs }}"
+
+    # push alpine docker image to local registry
+    - name: Push alpine image
+      ansible.builtin.command: podman push localhost:5005/alpine:latest --tls-verify="{{ nexus_validate_certs }}"
+      ignore_errors: yes
+      register: push_failed
+
+    # assert that push failed
+    - name: Assert that push failed
+      ansible.builtin.assert:
+        that:
+          - push_failed is failed
+        fail_msg: "push to docker-private-no-redeploy should fail"
+        success_msg: "push to docker-private-no-redeploy failed as expected"
+
+    # login to nexus docker registry port 5006
+    - name: Login to nexus docker registry port 5006
+      ansible.builtin.command: "podman login -u {{ nexus_admin_username }} -p {{ nexus_admin_password }} localhost:5006 --tls-verify={{ nexus_validate_certs }}"
+
+    # tag alpine docker image and push it to local registry port 5006
+    - name: Tag and push alpine image
+      ansible.builtin.command: podman tag alpine:latest localhost:5006/alpine:test-failure
+
+    # push alpine docker image to local registry port 5006
+    - name: Push alpine image
+      ansible.builtin.command: podman push localhost:5006/alpine:test-failure --tls-verify="{{ nexus_validate_certs }}"
+      ignore_errors: yes
+      register: push_failed
+
+    # assert that push failed
+    - name: Assert that push failed for localhost:5006/alpine:test-failure
+      ansible.builtin.assert:
+        that:
+          - push_failed is failed
+        fail_msg: "push to docker-private-no-redeploy should fail"
+        success_msg: "push to docker-private-no-redeploy failed as expected"
