--- a/molecule/nexus_common_test_vars.yml
+++ b/molecule/nexus_common_test_vars.yml
@@ -132,6 +132,15 @@ nexus_repos_docker_hosted:
     force_basic_auth: true
     v1_enabled: true
     write_policy: allow
+  - name: docker-private-redeploy
+    http_port: "5005"
+    write_policy: deny # will be ignored when allow_redeploy_latest is true
+    allow_redeploy_latest: true
+
+  - name: docker-private-no-redeploy
+    http_port: "5006"
+    write_policy: deny # will be effective when allow_redeploy_latest is false
+    allow_redeploy_latest: false
 
 nexus_repos_docker_proxy: []
 nexus_repos_apt_hosted:
