Add ability to use postgres as a database for new installs

--- a/molecule/default-converge.yml
+++ b/molecule/default-converge.yml
@@ -7,6 +7,7 @@
     - ssl-{{ ansible_os_family }}.yml
     - nexus_common_test_vars.yml
     - nexus_ldap_test_vars.yml
+    - nexus_postgres_test_vars.yml
 
   environment:
     http_proxy: "{{ lookup('env', 'http_proxy') }}"
