--- a/molecule/nexus_common_test_vars.yml
+++ b/molecule/nexus_common_test_vars.yml
@@ -5,20 +5,6 @@ httpd_ssl_cert_file_location: "{{ default_cert }}"
 httpd_ssl_cert_key_location: "{{ default_key }}"
 nexus_public_hostname: localhost
 nexus_api_timeout: 45
-nexus_purge: true
-nexus_run_provisionning: false
-
-# Postgres settings
-#nexus_migrate_orientdb_to_postgres: true
-nexus_use_postgres: true
-
-nexus_postgres_db_host: postgresql-server
-nexus_postgres_db_name: nexus
-nexus_postgres_db_port: 5432
-nexus_postgres_db_username: nexus
-nexus_postgres_db_password: nexus
-nexus_postgres_max_lifetime: 840000
-nexus_postgres_max_pool_size: 85
 
 nexus_custom_jvm_settings:
   - XX:+UseG1GC
@@ -92,44 +78,44 @@ nexus_repos_cleanup_policies:
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: docker_cleanup
     format: docker
     notes: "Docker"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: raw_cleanup
     format: raw
     notes: "Raw"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: rubygems_cleanup
     format: rubygems
     notes: "Rubygems"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: npm_cleanup
     format: npm
     notes: ""
     criteria:
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: npm_releases_cleanup
     format: npm
     notes: "npm RELEASES"
     criteria:
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
       isPrerelease: RELEASES
   - name: npm_prereleases_cleanup
     format: npm
     notes: "npm PRERELEASES"
     criteria:
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
       isPrerelease: PRERELEASES
   - name: nuget_cleanup
     format: nuget
@@ -137,7 +123,7 @@ nexus_repos_cleanup_policies:
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: gitlfs_cleanup
     format: gitlfs
     notes: "gitlfs"
@@ -150,7 +136,7 @@ nexus_repos_cleanup_policies:
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
       isPrerelease: PRERELEASES
   - name: yum_release_cleanup
     format: yum
@@ -158,7 +144,7 @@ nexus_repos_cleanup_policies:
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
       isPrerelease: RELEASES
   - name: yum_cleanup
     format: yum
@@ -166,63 +152,63 @@ nexus_repos_cleanup_policies:
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: apt_cleanup
     format: apt
     notes: "apt"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: helm_cleanup
     format: helm
     notes: "Helm"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: r_cleanup
     format: r
     notes: "r"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: conda_cleanup
     format: conda
     notes: "conda"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: go_cleanup
     format: go
     notes: "go"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: cocoapods_cleanup
     format: cocoapods
     notes: "cocoapods"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: conan_cleanup
     format: conan
     notes: "conan"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: p2_cleanup
     format: p2
     notes: "p2"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
 nexus_repos_maven_proxy:
   - name: central
     remote_url: https://repo1.maven.org/maven2/
