--- a/molecule/nexus_common_test_vars.yml
+++ b/molecule/nexus_common_test_vars.yml
@@ -78,44 +78,44 @@ nexus_repos_cleanup_policies:
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: docker_cleanup
     format: docker
     notes: "Docker"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: raw_cleanup
     format: raw
     notes: "Raw"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: rubygems_cleanup
     format: rubygems
     notes: "Rubygems"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: npm_cleanup
     format: npm
     notes: ""
     criteria:
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: npm_releases_cleanup
     format: npm
     notes: "npm RELEASES"
     criteria:
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
       isPrerelease: RELEASES
   - name: npm_prereleases_cleanup
     format: npm
     notes: "npm PRERELEASES"
     criteria:
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
       isPrerelease: PRERELEASES
   - name: nuget_cleanup
     format: nuget
@@ -123,7 +123,7 @@ nexus_repos_cleanup_policies:
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: gitlfs_cleanup
     format: gitlfs
     notes: "gitlfs"
@@ -136,7 +136,7 @@ nexus_repos_cleanup_policies:
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
       isPrerelease: PRERELEASES
   - name: yum_release_cleanup
     format: yum
@@ -144,7 +144,7 @@ nexus_repos_cleanup_policies:
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
       isPrerelease: RELEASES
   - name: yum_cleanup
     format: yum
@@ -152,63 +152,63 @@ nexus_repos_cleanup_policies:
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: apt_cleanup
     format: apt
     notes: "apt"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: helm_cleanup
     format: helm
     notes: "Helm"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: r_cleanup
     format: r
     notes: "r"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: conda_cleanup
     format: conda
     notes: "conda"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: go_cleanup
     format: go
     notes: "go"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: cocoapods_cleanup
     format: cocoapods
     notes: "cocoapods"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: conan_cleanup
     format: conan
     notes: "conan"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
   - name: p2_cleanup
     format: p2
     notes: "p2"
     criteria:
       lastBlobUpdated: 60
       lastDownloaded: 120
-      regexKey: 'beta-*'
+      regexKey: "beta-*"
 nexus_repos_maven_proxy:
   - name: central
     remote_url: https://repo1.maven.org/maven2/
