--- a/tasks/nexus_install.yml
+++ b/tasks/nexus_install.yml
@@ -218,9 +218,10 @@
     group: "{{ nexus_os_group }}"
     mode: "0750"
 
-- name: Prepare for Postgres
-  ansible.builtin.include_tasks: prepare_postgres.yml
-  when: nexus_use_postgres | default(false) | bool
+- name: Enable Pro features
+  ansible.builtin.include_tasks: enable_pro_version.yml
+  when: nexus_use_postgres | default(false) | bool or nexus_enable_pro_version | default(false) | bool
+  tags: nexus-pro
 
 - name: Setup Nexus data directory
   ansible.builtin.lineinfile:
