--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,6 +23,10 @@ nexus_script_dir: "{{ nexus_installation_dir }}/nexus-{{ nexus_version }}/etc/sc
 nexus_plugin_urls: []
 nexus_onboarding_wizard: false
 
+# Enable Pro features
+nexus_enable_pro_version: false
+nexus_pro_license_file: /path/to/license.lic
+
 # Nexus 3.21.0+ supports the ability to use PostgreSQL as the database
 # This is a one-time operation and should be done before starting Nexus
 # If you want to use PostgreSQL as the database for NEW installations, set the following to true
