--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -296,3 +296,8 @@
   ansible.builtin.include_tasks: create_task_each.yml
   with_items: "{{ nexus_scheduled_tasks + _nexus_backup_task | default([]) }}"
   when: nexus_run_provisionning | default(true) | bool
+
+- name: Migrate OrientDB to Postgres
+  ansible.builtin.include_tasks: migrate_database.yml
+  tags: nexus-migrate, nexus-healthcheck
+  when: nexus_migrate_database | default(false) | bool
