--- a/tasks/nexus_install.yml
+++ b/tasks/nexus_install.yml
@@ -22,7 +22,9 @@
     - nexus_latest_link.stat.islnk | default(false)
 
 - name: No version given => Version detection
-  when: nexus_version | length == 0
+  when:
+    - nexus_version | length == 0
+    - nexus_version_file | length == 0
   block:
     - name: Register nexus_version from currently installed
       # Note: setting nexus_version here skips the next block task.
@@ -51,6 +53,40 @@
             | regex_replace("^https://.*nexus-(\d*\.\d*\.\d*-\d*)-unix.tar.gz", "\1")
           }}
         nexus_version_detected_from: latest
+
+- name: Version file present => Version detection
+  when: nexus_version_file | length > 0
+  block:
+    - name: Register nexus_version from currently installed
+      # Note: setting nexus_version here skips the next block task.
+      ansible.builtin.set_fact:
+        nexus_version: "{{ nexus_version_running }}"
+        nexus_version_detected_from: installed
+      when:
+        - nexus_version_running is defined
+        - not (nexus_upgrade | default(false) | bool)
+
+    - name: download nexus_version_file
+      ansible.builtin.get_url:
+        url: "{{ nexus_download_url }}/{{ nexus_version_file }}"
+        dest: "{{ nexus_download_dir }}/{{ nexus_version_file }}"
+        force: false
+        validate_certs: "{{ nexus_download_ssl_verify | default(omit) }}"
+        owner: root
+        group: root
+        mode: "0644"
+      check_mode: false
+
+    - name: Get content of nexus_version_file
+      ansible.builtin.slurp:
+        src: "{{ nexus_download_dir }}/{{ nexus_version_file }}"
+      register: nexus_version_file_content
+      check_mode: false
+
+    - name: Register nexus_version from file content
+      ansible.builtin.set_fact:
+        nexus_version: "{{ nexus_version_file_content.content | b64decode }}"
+        nexus_version_detected_from: file
 
 - name: Print info about detected version to use
   vars:
