--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,6 +29,7 @@
 
 - name: Run installation tasks
   ansible.builtin.import_tasks: nexus_install.yml
+  tags: nexus-install
 
 - name: Configure apache reverse proxy
   ansible.builtin.include_tasks: httpd_reverse_proxy_config.yml
@@ -301,3 +302,8 @@
   ansible.builtin.include_tasks: migrate_database.yml
   tags: nexus-migrate, nexus-healthcheck
   when: nexus_migrate_database | default(false) | bool
+
+- name: Transform default proxies to yml
+  ansible.builtin.include_tasks: create_proxy_defaults.yml
+  tags: transform
+  when: nexus_transform | default(false) | bool
