Added team hosted repo list filtering

--- a/molecule/default-converge.yml
+++ b/molecule/default-converge.yml
@@ -2,7 +2,7 @@
 - name: Converge
   hosts: nexus
   roles:
-    - role: nexus3-oss
+    - role: nexus3-pro
   vars_files:
     - ssl-{{ ansible_os_family }}.yml
     - nexus_common_test_vars.yml
