--- a/molecule/nexus_common_test_vars.yml
+++ b/molecule/nexus_common_test_vars.yml
@@ -6,6 +6,8 @@ httpd_ssl_cert_key_location: "{{ default_key }}"
 nexus_public_hostname: localhost
 nexus_api_timeout: 45
 
+nexus_transform: true
+
 nexus_custom_jvm_settings:
   - XX:+UseG1GC
   - XX:+PrintGCDetails
@@ -651,3 +653,401 @@ nexus_proxy_exclude_hosts: # no_proxy env for shell does not obey java style
   - localhost
   - 127.*
   - "[::1]"
+
+
+
+hosted_defaults:
+  apt:
+    - repositoryName: <team>-repo
+      recipeName: recipeName,
+      online: true
+      storage:
+        blobStoreName: blob
+        writePolicy: ALLOW_ONCE # ALLOW_ONCE or ALLOW
+      cleanup_policies:
+        - policy-1
+      distribution: dist
+      aptSigning:
+        keypair: null
+        passphrase: null
+  docker:
+    - repositoryName: <team>-repo
+      recipeName: recipeName,
+      online: true
+      storage:
+        blobStoreName: blob
+        writePolicy: ALLOW_ONCE # ALLOW_ONCE or ALLOW
+        latestPolicy: null
+      cleanup_policies:
+        - policy-1
+      forceBasicAuth: ""
+      v1Enabled: true
+      httpPort: null
+      subdomain: null
+  gitlfs:
+    - repositoryName: <team>-repo
+      recipeName: recipeName,
+      online: true
+      storage:
+        blobStoreName: blob
+        writePolicy: ALLOW_ONCE # ALLOW_ONCE or ALLOW
+      cleanup_policies:
+        - policy-1
+  helm:
+    - repositoryName: <team>-repo
+      recipeName: recipeName,
+      online: true
+      storage:
+        blobStoreName: blob
+        writePolicy: ALLOW_ONCE # ALLOW_ONCE or ALLOW
+      cleanup_policies:
+        - policy-1
+  maven:
+    - repositoryName: <team>-repo
+      recipeName: recipeName,
+      online: true
+      storage:
+        blobStoreName: blob
+        writePolicy: ALLOW_ONCE # ALLOW_ONCE or ALLOW
+      cleanup_policies:
+        - policy-1
+      versionPolicy: release # release, snapshot or mixed
+      layoutPolicy: strict # strict or permissive
+  npm:
+    - repositoryName: <team>-repo
+      recipeName: recipeName,
+      online: true
+      storage:
+        blobStoreName: blob
+        writePolicy: ALLOW_ONCE # ALLOW_ONCE or ALLOW
+      cleanup_policies:
+        - policy-1
+  nuget:
+    - repositoryName: <team>-repo
+      recipeName: recipeName,
+      online: true
+      storage:
+        blobStoreName: blob
+        writePolicy: ALLOW_ONCE # ALLOW_ONCE or ALLOW
+      cleanup_policies:
+        - policy-1
+  python:
+    - repositoryName: <team>-repo
+      recipeName: recipeName,
+      online: true
+      storage:
+        blobStoreName: blob
+        writePolicy: ALLOW_ONCE # ALLOW_ONCE or ALLOW
+      cleanup_policies:
+        - policy-1
+  raw:
+    - repositoryName: <team>-repo
+      recipeName: recipeName,
+      online: true
+      storage:
+        blobStoreName: blob
+        writePolicy: ALLOW_ONCE # ALLOW_ONCE or ALLOW
+      cleanup_policies:
+        - policy-1
+      contentDisposition: INLINE
+  yum:
+    - repositoryName: <team>-repo
+      recipeName: recipeName,
+      online: true
+      storage:
+        blobStoreName: blob
+        writePolicy: ALLOW_ONCE # ALLOW_ONCE or ALLOW
+      cleanup_policies:
+        - policy-1
+      repodataDepth: 1
+      deployPolicy: strict # strict or permissive
+
+
+proxy_defaults:
+  - maven:
+      - name: maven-central
+        format: maven2
+        online: true
+        blocked: false
+        auto_block: true
+        remote:
+          url: https://repo.maven.apache.org/maven2
+          username: username
+          password: password
+        connection:
+          useTrustStore: false
+          retries: 2
+          user_agent_suffix: agent
+          enable_cookies: true
+          enable_circular_redirects: true
+          timeout: 1440
+        maximum_component_age: 1440
+        maximum_metadata_age: 1440
+        negative_cache_enabled: true
+        negative_cache_ttl: 1440
+        cleanup_policies:
+          - policy-1
+        version_policy: RELEASE
+        layout_policy: PERMISSIVE
+        content_disposition: INLINE
+      - name: maven-central-02
+        format: maven2
+        online: true
+        blocked: false
+        auto_block: true
+        remote:
+          url: https://repo.maven.apache.org/maven2
+          username: username
+          password: password
+        connection:
+          useTrustStore: false
+          retries: 2
+          user_agent_suffix: agent
+          enable_cookies: true
+          enable_circular_redirects: true
+          timeout: 1440
+        maximum_component_age: 1440
+        maximum_metadata_age: 1440
+        negative_cache_enabled: true
+        negative_cache_ttl: 1440
+        cleanup_policies:
+          - policy-1
+        version_policy: RELEASE
+        layout_policy: PERMISSIVE
+        content_disposition: INLINE
+  # - python:
+  #     - name: pypi-central
+  #       format: pypi
+  #       online: true
+  #       blocked: false
+  #       auto_block: true
+  #       remote:
+  #         url: https://pypi.org/simple
+  #         username:
+  #         password:
+  #       connection:
+  #         useTrustStore: false
+  #         retries:
+  #         user_agent_suffix:
+  #         enable_cookies:
+  #         enable_circular_redirects:
+  #         timeout:
+  #       maximum_component_age:
+  #       maximum_metadata_age:
+  #       negative_cache_enabled:
+  #       negative_cache_ttl:
+  #       cleanup_policies:
+  #         - policy-1
+  # - npm:
+  #     - name: npm-registry
+  #       format: npm
+  #       online: true
+  #       blocked: false
+  #       auto_block: true
+  #       remote:
+  #         url: https://registry.npmjs.org/
+  #         username:
+  #         password:
+  #         bearerToken:
+  #       connection:
+  #         useTrustStore: false
+  #         retries:
+  #         user_agent_suffix:
+  #         enable_cookies:
+  #         enable_circular_redirects:
+  #         timeout:
+  #       maximum_component_age:
+  #       maximum_metadata_age:
+  #       negative_cache_enabled:
+  #       negative_cache_ttl:
+  #       cleanup_policies:
+  #         - policy-1
+  # - nuget:
+  #     - name: nuget-gallery
+  #       format: nuget
+  #       online: true
+  #       blocked: false
+  #       auto_block: true
+  #       nuget_version: v3
+  #       remote:
+  #         url: https://api.nuget.org/v3/index.json
+  #         username:
+  #         password:
+  #       connection:
+  #         useTrustStore: false
+  #         retries:
+  #         user_agent_suffix:
+  #         enable_cookies:
+  #         enable_circular_redirects:
+  #         timeout:
+  #       maximum_component_age:
+  #       maximum_metadata_age:
+  #       negative_cache_enabled:
+  #       negative_cache_ttl:
+  #       cleanup_policies:
+  #         - policy-1
+  # - apt:
+  #     - name: ubuntu-apt
+  #       format: apt
+  #       online: true
+  #       blocked: false
+  #       auto_block: true
+  #       distribution: bionic
+  #       flat: false
+  #       remote:
+  #         url: http://archive.ubuntu.com/ubuntu/
+  #         username:
+  #         password:
+  #       connection:
+  #         useTrustStore: false
+  #         retries:
+  #         user_agent_suffix:
+  #         enable_cookies:
+  #         enable_circular_redirects:
+  #         timeout:
+  #       maximum_component_age:
+  #       maximum_metadata_age:
+  #       negative_cache_enabled:
+  #       negative_cache_ttl:
+  #       cleanup_policies:
+  #         - policy-1
+  # - helm:
+  #     - name: helm-proxy
+  #       format: helm
+  #       online: true
+  #       blocked: false
+  #       auto_block: true
+  #       remote:
+  #         url: https://kubernetes-charts.storage.googleapis.com
+  #         username:
+  #         password:
+  #       connection:
+  #         useTrustStore: false
+  #         retries:
+  #         user_agent_suffix:
+  #         enable_cookies:
+  #         enable_circular_redirects:
+  #         timeout:
+  #       maximum_component_age:
+  #       maximum_metadata_age:
+  #       negative_cache_enabled:
+  #       negative_cache_ttl:
+  #       cleanup_policies:
+  #         - policy-1
+  # - r:
+  #     - name: r-proxy
+  #       format: r
+  #       online: true
+  #       blocked: false
+  #       auto_block: true
+  #       remote:
+  #         url: https://cran.r-project.org
+  #         username:
+  #         password:
+  #       connection:
+  #         useTrustStore: false
+  #         retries:
+  #         user_agent_suffix:
+  #         enable_cookies:
+  #         enable_circular_redirects:
+  #         timeout:
+  #       maximum_component_age:
+  #       maximum_metadata_age:
+  #       negative_cache_enabled:
+  #       negative_cache_ttl:
+  #       cleanup_policies:
+  #         - policy-1
+  # - raw:
+  #     - name: raw-proxy
+  #       format: raw
+  #       online: true
+  #       blocked: false
+  #       auto_block: true
+  #       remote:
+  #         url: https://www.jfrog.com/
+  #         username:
+  #         password:
+  #       connection:
+  #         useTrustStore: false
+  #         retries:
+  #         user_agent_suffix:
+  #         enable_cookies:
+  #         enable_circular_redirects:
+  #         timeout:
+  #       maximum_component_age:
+  #       maximum_metadata_age:
+  #       negative_cache_enabled:
+  #       negative_cache_ttl:
+  #       cleanup_policies:
+  #         - policy-1
+  #       contentDisposition:
+  # - conda:
+  #     - name: conda-proxy
+  #       format: conda
+  #       online: true
+  #       blocked: false
+  #       auto_block: true
+  #       remote:
+  #         url: https://repo.anaconda.com/pkgs/main
+  #         username:
+  #         password:
+  #       connection:
+  #         useTrustStore: false
+  #         retries:
+  #         user_agent_suffix:
+  #         enable_cookies:
+  #         enable_circular_redirects:
+  #         timeout:
+  #       maximum_component_age:
+  #       maximum_metadata_age:
+  #       negative_cache_enabled:
+  #       negative_cache_ttl:
+  #       cleanup_policies:
+  #         - policy-1
+  # - go:
+  #     - name: go-proxy
+  #       format: go
+  #       online: true
+  #       blocked: false
+  #       auto_block: true
+  #       remote:
+  #         url: https://proxy.golang.org
+  #         username:
+  #         password:
+  #       connection:
+  #         useTrustStore: false
+  #         retries:
+  #         user_agent_suffix:
+  #         enable_cookies:
+  #         enable_circular_redirects:
+  #         timeout:
+  #       maximum_component_age:
+  #       maximum_metadata_age:
+  #       negative_cache_enabled:
+  #       negative_cache_ttl:
+  #       cleanup_policies:
+  #         - policy-1
+  - yum:
+      - name: yum-proxy
+        format: yum
+        online: true
+        blocked: false
+        auto_block: true
+        remote:
+          url: http://mirror.centos.org/centos/
+          username: username
+          password: password
+        connection:
+          useTrustStore: false
+          retries: 2
+          user_agent_suffix: agent
+          enable_cookies: true
+          enable_circular_redirects: true
+          timeout: 1440
+        maximum_component_age: 1440
+        maximum_metadata_age: 1440
+        negative_cache_enabled: true
+        negative_cache_ttl: 1440
+        cleanup_policies:
+          - policy-1
+
