Wait for nexus to be running before stopping the playbook execution

--- a/tasks/enable_postgres.yml
+++ b/tasks/enable_postgres.yml
@@ -46,3 +46,6 @@
     name: nexus.service
     state: started
   tags: nexus-postgres,nexus-migrate
+  notify:
+    - wait-for-nexus
+    - wait-for-nexus-port
