Use latest migrator version

--- a/molecule/nexus_postgres_test_vars.yml
+++ b/molecule/nexus_postgres_test_vars.yml
@@ -1,7 +1,7 @@
 nexus_purge: false
 nexus_run_provisionning: true
 
-nexus_db_migrator_version: 3.67.0-04
+nexus_db_migrator_version: 3.68.0-04
 nexus_db_migrator_download_url: https://download.sonatype.com/nexus/nxrm3-migrator
 
 # Enable Pro features
@@ -9,6 +9,7 @@ nexus_enable_pro_version: true
 
 # Postgres settings
 nexus_migrate_database: true
+nexus_migration_type: postgres
 nexus_migrate_tmp_dir: /tmp
 nexus_migrate_content_migration: true
 nexus_migrate_force: true
